--- a/Image Generator project/Image Generator project/Image Generator project.csproj
+++ b/Image Generator project/Image Generator project/Image Generator project.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Drawer.cs" />
     <Compile Include="NotationObject.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
